--- a/qihoo-360t7-imm.config
+++ b/qihoo-360t7-imm.config
@@ -170,11 +170,13 @@ CONFIG_PACKAGE_kmod-crypto-md4=y
 CONFIG_PACKAGE_kmod-crypto-seqiv=y
 CONFIG_PACKAGE_kmod-cryptodev=y
 CONFIG_PACKAGE_kmod-ebtables=y
+# 移除IPv6相关ebtables配置
 # CONFIG_PACKAGE_kmod-ebtables-ipv4=y
 # CONFIG_PACKAGE_kmod-ebtables-ipv6=y
 CONFIG_PACKAGE_kmod-fs-autofs4=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-ifb=y
+# 移除IPv6相关内核模块
 # CONFIG_PACKAGE_kmod-ip6tables-extra=y
 CONFIG_PACKAGE_kmod-ipt-compat-xtables=y
 CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
@@ -190,6 +192,7 @@ CONFIG_PACKAGE_kmod-ipt-ipv4options=y
 CONFIG_PACKAGE_kmod-ipt-nat-extra=y
 CONFIG_PACKAGE_kmod-ipt-offload=y
 CONFIG_PACKAGE_kmod-ipt-proto=y
+# 移除IPv6相关iptables内核模块
 # CONFIG_PACKAGE_kmod-ipt-raw6=y
 CONFIG_PACKAGE_kmod-ipt-tee=y
 CONFIG_PACKAGE_kmod-ipt-tproxy=y
@@ -224,6 +227,7 @@ CONFIG_PACKAGE_libfido2=y
 CONFIG_PACKAGE_libipset=y
 CONFIG_PACKAGE_libiptext=y
 CONFIG_PACKAGE_libiptext-nft=y
+# 移除IPv6相关lib库
 # CONFIG_PACKAGE_libiptext6=y
 CONFIG_PACKAGE_libkvcutil=y
 CONFIG_PACKAGE_liblz4=y
@@ -253,6 +257,7 @@ CONFIG_PACKAGE_luci-app-cloudflared=y
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-eqos=y
 CONFIG_PACKAGE_luci-app-mtwifi-cfg=y
+# 移除mwan3相关配置
 # CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-openvpn-server=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy is not set
@@ -280,6 +285,7 @@ CONFIG_PACKAGE_luci-i18n-cloudflared-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-eqos-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mtwifi-cfg-zh-cn=y
+# 移除mwan3汉化包
 # CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
@@ -295,6 +301,7 @@ CONFIG_PACKAGE_miniupnpd-nftables=y
 CONFIG_PACKAGE_mtk-smp=y
 CONFIG_PACKAGE_mtkhqos_util=y
 CONFIG_PACKAGE_mtwifi-cfg=y
+# 移除mwan3主包
 # CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_openssh-keygen=y
