--- a/qihoo-360t7-imm.config
+++ b/qihoo-360t7-imm.config
@@ -1,7 +1,7 @@
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_filogic=y
 CONFIG_TARGET_mediatek_filogic_DEVICE_qihoo_360t7=y
-# CONFIG_DEVEL=y
+CONFIG_DEVEL=y
 CONFIG_AFALG_UPDATE_CTR_IV=y
 CONFIG_BUSYBOX_CONFIG_BLKID=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_BLKID_TYPE=y
