--- a/qihoo-360t7-imm.config
+++ b/qihoo-360t7-imm.config
@@ -2,13 +2,13 @@ CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_filogic=y
 CONFIG_TARGET_mediatek_filogic_DEVICE_qihoo_360t7=y
 CONFIG_DEVEL=y
+CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_AFALG_UPDATE_CTR_IV=y
 CONFIG_BUSYBOX_CONFIG_BLKID=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_BLKID_TYPE=y
 CONFIG_BUSYBOX_CONFIG_VOLUMEID=y
 CONFIG_CONNINFRA_AUTO_UP=y
 CONFIG_CONNINFRA_EMI_SUPPORT=y
-# CONFIG_GDB is not set
 CONFIG_HTOP_LMSENSORS=y
 # CONFIG_KERNEL_BLK_DEV_THROTTLING is not set
 # CONFIG_KERNEL_CFS_BANDWIDTH is not set
@@ -51,7 +51,7 @@ CONFIG_MTK_G_BAND_256QAM_SUPPORT=y
 CONFIG_MTK_HDR_TRANS_RX_SUPPORT=y
 CONFIG_MTK_HDR_TRANS_TX_SUPPORT=y
 CONFIG_MTK_ICAP_SUPPORT=y
-# 移除了 MTK_IGMP_SNOOP_SUPPORT（多播相关）
+CONFIG_MTK_IGMP_SNOOP_SUPPORT=y
 CONFIG_MTK_INTERWORKING=y
 CONFIG_MTK_MAP_R2_6E_SUPPORT=y
 CONFIG_MTK_MAP_R2_VER_SUPPORT=y
@@ -61,13 +61,16 @@ CONFIG_MTK_MAP_SUPPORT=y
 CONFIG_MTK_MBO_SUPPORT=y
 CONFIG_MTK_MBSS_DTIM_SUPPORT=y
 CONFIG_MTK_MBSS_SUPPORT=y
-# 移除了 MTK_MCAST_RATE_SPECIFIC（多播相关）
+CONFIG_MTK_MCAST_RATE_SPECIFIC=y
 CONFIG_MTK_MEMORY_SHRINK=y
 CONFIG_MTK_MEMORY_SHRINK_AGGRESS=y
 CONFIG_MTK_MGMT_TXPWR_CTRL=y
 CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT=y
 CONFIG_MTK_MT7981_NEW_FW=y
+CONFIG_MTK_MT_AP_SUPPORT=m
+CONFIG_MTK_MT_DFS_SUPPORT=y
 CONFIG_MTK_MT_MAC=y
+CONFIG_MTK_MT_WIFI=m
 CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
 CONFIG_MTK_MUMIMO_SUPPORT=y
 CONFIG_MTK_MU_RA_SUPPORT=y
@@ -83,6 +86,7 @@ CONFIG_MTK_SCS_FW_OFFLOAD=y
 CONFIG_MTK_SECOND_IF_NONE=y
 CONFIG_MTK_SMART_CARRIER_SENSE_SUPPORT=y
 CONFIG_MTK_SPECTRUM_SUPPORT=y
+CONFIG_MTK_SUPPORT_OPENWRT=y
 CONFIG_MTK_THIRD_IF_NONE=y
 CONFIG_MTK_TPC_SUPPORT=y
 CONFIG_MTK_TXBF_SUPPORT=y
@@ -92,10 +96,12 @@ CONFIG_MTK_VOW_SUPPORT=y
 CONFIG_MTK_WARP_V2=y
 CONFIG_MTK_WDS_SUPPORT=y
 CONFIG_MTK_WHNAT_SUPPORT=m
+CONFIG_MTK_WIFI_BASIC_FUNC=y
 CONFIG_MTK_WIFI_DRIVER=y
 CONFIG_MTK_WIFI_EAP_FEATURE=y
 CONFIG_MTK_WIFI_FW_BIN_LOAD=y
 CONFIG_MTK_WIFI_MODE_AP=m
+CONFIG_MTK_WIFI_MT_MAC=y
 CONFIG_MTK_WIFI_TWT_SUPPORT=y
 CONFIG_MTK_WLAN_HOOK=y
 CONFIG_MTK_WLAN_SERVICE=y
@@ -135,7 +141,6 @@ CONFIG_PACKAGE_iptables-mod-iface=y
 CONFIG_PACKAGE_iptables-mod-ipmark=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
 CONFIG_PACKAGE_iptables-mod-iprange=y
-# 移除了 iptables-mod-ipv4options 中 IPv6 相关隐含依赖（直接删除该配置项）
 CONFIG_PACKAGE_iptables-mod-nat-extra=y
 CONFIG_PACKAGE_iptables-mod-proto=y
 CONFIG_PACKAGE_iptables-mod-tee=y
@@ -171,7 +176,6 @@ CONFIG_PACKAGE_kmod-ipt-ipmark=y
 CONFIG_PACKAGE_kmod-ipt-ipopt=y
 CONFIG_PACKAGE_kmod-ipt-iprange=y
 CONFIG_PACKAGE_kmod-ipt-ipset=y
-# 移除了 kmod-ipt-ipv4options（IPv6 相关）
 CONFIG_PACKAGE_kmod-ipt-nat-extra=y
 CONFIG_PACKAGE_kmod-ipt-offload=y
 CONFIG_PACKAGE_kmod-ipt-proto=y
@@ -207,7 +211,7 @@ CONFIG_PACKAGE_libevdev=y
 CONFIG_PACKAGE_libfido2=y
 CONFIG_PACKAGE_libipset=y
 CONFIG_PACKAGE_libiptext=y
-# 移除了 libiptext-nft（IPv6/NFT 相关）
+CONFIG_PACKAGE_libiptext-nft=y
 CONFIG_PACKAGE_libiptext6=y
 CONFIG_PACKAGE_libkvcutil=y
 CONFIG_PACKAGE_liblz4=y
@@ -305,6 +309,7 @@ CONFIG_WARP_VERSION=2
 CONFIG_WED_HW_RRO_SUPPORT=y
 # CONFIG_WOLFSSL_HAS_ECC25519 is not set
 CONFIG_ZRAM_DEF_COMP_LZ4HC=y
+CONFIG_first_card=y
 CONFIG_first_card_name="MT7981"
 # CONFIG_MTK_BAND_STEERING is not set
 # CONFIG_MTK_DEFAULT_5G_PROFILE is not set
