--- a/qihoo-360t7-imm.config
+++ b/qihoo-360t7-imm.config
@@ -18,6 +18,9 @@ CONFIG_KERNEL_DEVMEM=y
 # CONFIG_KERNEL_KEYS is not set
 # CONFIG_KERNEL_MEMCG_SWAP is not set
 CONFIG_KERNEL_NET_CLS_CGROUP=y
+# 新增BBRv3内核级支持（关键）
+CONFIG_KERNEL_TCP_CONG_BBR3=y
+CONFIG_KERNEL_TCP_BBR3=y
 CONFIG_LUCI_SRCDIET=y
 CONFIG_MTK_ACK_CTS_TIMEOUT_SUPPORT=y
 CONFIG_MTK_AIR_MONITOR=y
@@ -199,6 +202,10 @@ CONFIG_PACKAGE_kmod-oaf=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
+# 新增BBRv3模块支持（保证LuCI界面可选）
+CONFIG_PACKAGE_kmod-tcp-bbr3=y
+CONFIG_PACKAGE_kmod-tcp-bbr2=y
+CONFIG_PACKAGE_kmod-tcp-cubic=y
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-warp=y
 CONFIG_PACKAGE_kmod-zram=y
