--- a/qihoo-360t7-imm.config
+++ b/qihoo-360t7-imm.config
@@ -1,121 +1,320 @@
-# ================= 核心机型适配（360T7 + MT798x 6.6 内核）=================
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_filogic=y
-CONFIG_TARGET_mediatek_filogic_DEVICE_qihoo_360t7=y  # 360T7 唯一设备标识
+CONFIG_TARGET_mediatek_filogic_DEVICE_qihoo_360t7=y
 CONFIG_DEVEL=y
-CONFIG_NAT_FULL_CONE=y  # 适配360T7硬件NAT特性
-
-# ================= BBRv3 模块（完整启用，开机默认）=================
-CONFIG_KERNEL_TCP_CONG_BBR=y
-CONFIG_KERNEL_TCP_CONG_BBR3=y
-CONFIG_KERNEL_DEFAULT_TCP_CONG="bbr3"  # 内核默认BBRv3
-CONFIG_KERNEL_NET_SCH_FQ=y
-CONFIG_KERNEL_NET_SCH_FQ_CODEL=y
-CONFIG_KERNEL_NET_SCH_CODEL=y
-CONFIG_KERNEL_NET_SCH_HTB=y
-CONFIG_PACKAGE_kmod-tcp-bbr=y  # BBRv3内核模块
-CONFIG_PACKAGE_iproute2-tc=y    # 网络调优工具
-
-# ================= 剔除不需要的插件（严格屏蔽mwan3/多拨）=================
-CONFIG_PACKAGE_luci-app-mwan3=n
-CONFIG_PACKAGE_mwan3=n
-CONFIG_PACKAGE_luci-app-multiwan=n
-CONFIG_PACKAGE_multiwan=n
-CONFIG_PACKAGE_luci-app-syncdial-multiwan=n  # 仅保留syncdial核心，无多拨依赖
-CONFIG_PACKAGE_luci-app-dialer=n             # 额外屏蔽多拨相关组件
-
-# ================= 新增指定插件（完整适配360T7）=================
-# 应用过滤
-CONFIG_PACKAGE_luci-app-appfilter=y
+CONFIG_BUSYBOX_CUSTOM=y
+CONFIG_AFALG_UPDATE_CTR_IV=y
+CONFIG_BUSYBOX_CONFIG_BLKID=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_BLKID_TYPE=y
+CONFIG_BUSYBOX_CONFIG_VOLUMEID=y
+CONFIG_CONNINFRA_AUTO_UP=y
+CONFIG_CONNINFRA_EMI_SUPPORT=y
+CONFIG_HTOP_LMSENSORS=y
+# CONFIG_KERNEL_BLK_DEV_THROTTLING is not set
+# CONFIG_KERNEL_CFS_BANDWIDTH is not set
+CONFIG_KERNEL_CGROUP_DEVICE=y
+CONFIG_KERNEL_CGROUP_FREEZER=y
+CONFIG_KERNEL_DEVMEM=y
+# CONFIG_KERNEL_KEYS is not set
+# CONFIG_KERNEL_MEMCG_SWAP is not set
+CONFIG_KERNEL_NET_CLS_CGROUP=y
+CONFIG_LUCI_SRCDIET=y
+CONFIG_MTK_ACK_CTS_TIMEOUT_SUPPORT=y
+CONFIG_MTK_AIR_MONITOR=y
+CONFIG_MTK_AMPDU_CONF_SUPPORT=y
+CONFIG_MTK_ANTENNA_CONTROL_SUPPORT=y
+CONFIG_MTK_APCLI_SUPPORT=y
+CONFIG_MTK_ATE_SUPPORT=y
+CONFIG_MTK_BACKGROUND_SCAN_SUPPORT=y
+CONFIG_MTK_CAL_BIN_FILE_SUPPORT=y
+CONFIG_MTK_CFG_SUPPORT_FALCON_MURU=y
+CONFIG_MTK_CFG_SUPPORT_FALCON_PP=y
+CONFIG_MTK_CFG_SUPPORT_FALCON_SR=y
+CONFIG_MTK_CFG_SUPPORT_FALCON_TXCMD_DBG=y
+CONFIG_MTK_CHIP_MT7981=y
+CONFIG_MTK_CONNINFRA_APSOC=y
+CONFIG_MTK_CONNINFRA_APSOC_MT7981=y
+CONFIG_MTK_CON_WPS_SUPPORT=y
+CONFIG_MTK_DBDC_MODE=y
+CONFIG_MTK_DOT11K_RRM_SUPPORT=y
+CONFIG_MTK_DOT11R_FT_SUPPORT=y
+CONFIG_MTK_DOT11W_PMF_SUPPORT=y
+CONFIG_MTK_DOT11_HE_AX=y
+CONFIG_MTK_DOT11_N_SUPPORT=y
+CONFIG_MTK_DOT11_VHT_AC=y
+CONFIG_MTK_FAST_NAT_SUPPORT=y
+CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
+CONFIG_MTK_FIRST_IF_IPAILNA=y
+CONFIG_MTK_FIRST_IF_MT7981=y
+CONFIG_MTK_GREENAP_SUPPORT=y
+CONFIG_MTK_G_BAND_256QAM_SUPPORT=y
+CONFIG_MTK_HDR_TRANS_RX_SUPPORT=y
+CONFIG_MTK_HDR_TRANS_TX_SUPPORT=y
+CONFIG_MTK_ICAP_SUPPORT=y
+CONFIG_MTK_IGMP_SNOOP_SUPPORT=y
+CONFIG_MTK_INTERWORKING=y
+CONFIG_MTK_MAP_R2_6E_SUPPORT=y
+CONFIG_MTK_MAP_R2_VER_SUPPORT=y
+CONFIG_MTK_MAP_R3_6E_SUPPORT=y
+CONFIG_MTK_MAP_R3_VER_SUPPORT=y
+CONFIG_MTK_MAP_SUPPORT=y
+CONFIG_MTK_MBO_SUPPORT=y
+CONFIG_MTK_MBSS_DTIM_SUPPORT=y
+CONFIG_MTK_MBSS_SUPPORT=y
+CONFIG_MTK_MCAST_RATE_SPECIFIC=y
+CONFIG_MTK_MEMORY_SHRINK=y
+CONFIG_MTK_MEMORY_SHRINK_AGGRESS=y
+CONFIG_MTK_MGMT_TXPWR_CTRL=y
+CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT=y
+CONFIG_MTK_MT7981_NEW_FW=y
+CONFIG_MTK_MT_AP_SUPPORT=m
+CONFIG_MTK_MT_DFS_SUPPORT=y
+CONFIG_MTK_MT_MAC=y
+CONFIG_MTK_MT_WIFI=m
+CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
+CONFIG_MTK_MUMIMO_SUPPORT=y
+CONFIG_MTK_MU_RA_SUPPORT=y
+CONFIG_MTK_OFFCHANNEL_SCAN_FEATURE=y
+CONFIG_MTK_OWE_SUPPORT=y
+CONFIG_MTK_QOS_R1_SUPPORT=y
+CONFIG_MTK_RA_PHY_RATE_SUPPORT=y
+CONFIG_MTK_RED_SUPPORT=y
+CONFIG_MTK_RTMP_FLASH_SUPPORT=y
+CONFIG_MTK_RT_FIRST_CARD_EEPROM="flash"
+CONFIG_MTK_RT_FIRST_IF_RF_OFFSET=0xc0000
+CONFIG_MTK_SCS_FW_OFFLOAD=y
+CONFIG_MTK_SECOND_IF_NONE=y
+CONFIG_MTK_SMART_CARRIER_SENSE_SUPPORT=y
+CONFIG_MTK_SPECTRUM_SUPPORT=y
+CONFIG_MTK_SUPPORT_OPENWRT=y
+CONFIG_MTK_THIRD_IF_NONE=y
+CONFIG_MTK_TPC_SUPPORT=y
+CONFIG_MTK_TXBF_SUPPORT=y
+CONFIG_MTK_UAPSD=y
+CONFIG_MTK_VLAN_SUPPORT=y
+CONFIG_MTK_VOW_SUPPORT=y
+CONFIG_MTK_WARP_V2=y
+CONFIG_MTK_WDS_SUPPORT=y
+CONFIG_MTK_WHNAT_SUPPORT=m
+CONFIG_MTK_WIFI_BASIC_FUNC=y
+CONFIG_MTK_WIFI_DRIVER=y
+CONFIG_MTK_WIFI_EAP_FEATURE=y
+CONFIG_MTK_WIFI_FW_BIN_LOAD=y
+CONFIG_MTK_WIFI_MODE_AP=m
+CONFIG_MTK_WIFI_MT_MAC=y
+CONFIG_MTK_WIFI_TWT_SUPPORT=y
+CONFIG_MTK_WLAN_HOOK=y
+CONFIG_MTK_WLAN_SERVICE=y
+CONFIG_MTK_WNM_SUPPORT=y
+CONFIG_MTK_WPA3_SUPPORT=y
+CONFIG_MTK_WSC_INCLUDED=y
+CONFIG_MTK_WSC_V2_SUPPORT=y
+# CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM is not set
+CONFIG_OPENSSL_WITH_NPN=y
+CONFIG_OPENVPN_openssl_ENABLE_DCO=y
+CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
+CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
+CONFIG_OPENVPN_openssl_ENABLE_LZO=y
+CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
+CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
 CONFIG_PACKAGE_appfilter=y
-# Cloudflare隧道
-CONFIG_PACKAGE_luci-app-cloudflared=y
+CONFIG_PACKAGE_attendedsysupgrade-common=y
+CONFIG_PACKAGE_blockd=y
+CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_cloudflared=y
-CONFIG_PACKAGE_luci-proto-cloudflared=y
-# DDNS动态域名
-CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_datconf=y
+CONFIG_PACKAGE_datconf-lua=y
 CONFIG_PACKAGE_ddns-scripts=y
-CONFIG_PACKAGE_ddns-scripts_aliyun=y
-CONFIG_PACKAGE_ddns-scripts_dnspod=y
-# 智能限速
-CONFIG_PACKAGE_luci-app-eqos=y
-CONFIG_PACKAGE_eqos=y
-# OpenVPN服务端
-CONFIG_PACKAGE_luci-app-openvpn-server=y
-CONFIG_PACKAGE_openvpn-easy-rsa=y
-CONFIG_PACKAGE_openvpn-openssl=y
-CONFIG_PACKAGE_luci-proto-openvpn=y
-# 多线复用（无多拨）
-CONFIG_PACKAGE_luci-app-syncdial=y
-CONFIG_PACKAGE_ppp-mod-pppoe=y
-CONFIG_PACKAGE_iproute2=y
-# 时间控制
-CONFIG_PACKAGE_luci-app-timecontrol=y
-CONFIG_PACKAGE_timecontrol=y
-
-# ================= 最新WiFi驱动（360T7专属优化）=================
-CONFIG_PACKAGE_kmod-mt7981-firmware=y  # 仓库最新MT7981固件
-CONFIG_PACKAGE_kmod-mt7915e=y          # 360T7 WiFi6驱动（仓库优化版）
-CONFIG_PACKAGE_kmod-mt7603e=y
-CONFIG_PACKAGE_wireless-regdb=y        # 无线区域配置
+CONFIG_PACKAGE_ddns-scripts-services=y
+CONFIG_PACKAGE_ebtables-legacy=y
+CONFIG_PACKAGE_ebtables-legacy-utils=y
+CONFIG_PACKAGE_etherwake=y
+CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_ip-bridge=y
+CONFIG_PACKAGE_ip-tiny=y
+CONFIG_PACKAGE_ipset=y
+CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+CONFIG_PACKAGE_iptables-mod-extra=y
+CONFIG_PACKAGE_iptables-mod-filter=y
+CONFIG_PACKAGE_iptables-mod-hashlimit=y
+CONFIG_PACKAGE_iptables-mod-iface=y
+CONFIG_PACKAGE_iptables-mod-ipmark=y
+CONFIG_PACKAGE_iptables-mod-ipopt=y
+CONFIG_PACKAGE_iptables-mod-iprange=y
+CONFIG_PACKAGE_iptables-mod-nat-extra=y
+CONFIG_PACKAGE_iptables-mod-proto=y
+CONFIG_PACKAGE_iptables-mod-tee=y
+CONFIG_PACKAGE_iptables-mod-tproxy=y
+CONFIG_PACKAGE_iptables-mod-u32=y
+CONFIG_PACKAGE_iptables-nft=y
 CONFIG_PACKAGE_iw=y
-CONFIG_PACKAGE_wpa_supplicant=y
-CONFIG_PACKAGE_luci-app-wifi-config=y  # WiFi配置界面（适配360T7双频）
-
-# ================= 网络加速（适配360T7硬件）=================
-CONFIG_PACKAGE_kmod-nft-offload=y      # 硬件NAT加速
-CONFIG_PACKAGE_kmod-flow-offload=y     # 流量硬卸载
-CONFIG_PACKAGE_kmod-fast-classifier=y
-CONFIG_PACKAGE_firewall4=y
-CONFIG_PACKAGE_nftables-json=y
-CONFIG_KERNEL_TCP_FASTOPEN=y           # TCP快速打开
-CONFIG_KERNEL_TCP_SACK=y
-CONFIG_KERNEL_TCP_DSACK=y
-
-# ================= 基础必备组件（轻量化）=================
-CONFIG_PACKAGE_dnsmasq_full=y
-CONFIG_PACKAGE_luci=y
-CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-opkg=y
-CONFIG_PACKAGE_luci-proto-pppoe=y
-CONFIG_PACKAGE_odhcp6c=y
-CONFIG_PACKAGE_odhcpd-ipv6only=y
-CONFIG_PACKAGE_sshd=y
-CONFIG_PACKAGE_zram-swap=y
-
-# ================= 关闭无用组件（节省360T7资源）=================
-CONFIG_PACKAGE_kmod-usb3=n  # 360T7无USB3.0
-CONFIG_PACKAGE_luci-app-upnp=n
-CONFIG_PACKAGE_mountd=n
-CONFIG_PACKAGE_luci-app-accesscontrol=n
-CONFIG_PACKAGE_luci-app-wol=n
-
-# ========== 补充插件依赖 ==========
-# appfilter 依赖
-CONFIG_PACKAGE_appfilter=y
-CONFIG_PACKAGE_luci-lib-ipkg=y
-
-# cloudflared 依赖
-CONFIG_PACKAGE_cloudflared=y
-CONFIG_PACKAGE_libev=y
-CONFIG_PACKAGE_libsodium=y
-
-# ddns 依赖（多厂商支持）
-CONFIG_PACKAGE_ddns-scripts=y
-CONFIG_PACKAGE_ddns-scripts_aliyun=y
-CONFIG_PACKAGE_ddns-scripts_dnspod=y
-CONFIG_PACKAGE_ddns-scripts_cloudflare=y
-
-# eqos 依赖
-CONFIG_PACKAGE_eqos=y
+CONFIG_PACKAGE_kmod-ata-core=y
+CONFIG_PACKAGE_kmod-bonding=y
+CONFIG_PACKAGE_kmod-conninfra=y
+CONFIG_PACKAGE_kmod-crypto-ccm=y
+CONFIG_PACKAGE_kmod-crypto-cmac=y
+CONFIG_PACKAGE_kmod-crypto-ctr=y
+CONFIG_PACKAGE_kmod-crypto-gcm=y
+CONFIG_PACKAGE_kmod-crypto-geniv=y
+CONFIG_PACKAGE_kmod-crypto-gf128=y
+CONFIG_PACKAGE_kmod-crypto-ghash=y
+# CONFIG_PACKAGE_kmod-crypto-kpp is not set
+CONFIG_PACKAGE_kmod-crypto-md4=y
+CONFIG_PACKAGE_kmod-crypto-seqiv=y
+CONFIG_PACKAGE_kmod-cryptodev=y
+CONFIG_PACKAGE_kmod-ebtables=y
+CONFIG_PACKAGE_kmod-fs-autofs4=y
+CONFIG_PACKAGE_kmod-fs-vfat=y
+CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-ipt-compat-xtables=y
+CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
+CONFIG_PACKAGE_kmod-ipt-extra=y
+CONFIG_PACKAGE_kmod-ipt-filter=y
+CONFIG_PACKAGE_kmod-ipt-hashlimit=y
+CONFIG_PACKAGE_kmod-ipt-iface=y
+CONFIG_PACKAGE_kmod-ipt-ipmark=y
+CONFIG_PACKAGE_kmod-ipt-ipopt=y
+CONFIG_PACKAGE_kmod-ipt-iprange=y
+CONFIG_PACKAGE_kmod-ipt-ipset=y
+CONFIG_PACKAGE_kmod-ipt-nat-extra=y
+CONFIG_PACKAGE_kmod-ipt-offload=y
+CONFIG_PACKAGE_kmod-ipt-proto=y
+CONFIG_PACKAGE_kmod-ipt-tee=y
+CONFIG_PACKAGE_kmod-ipt-tproxy=y
+CONFIG_PACKAGE_kmod-ipt-u32=y
+CONFIG_PACKAGE_kmod-lib-lz4-decompress=y
+CONFIG_PACKAGE_kmod-lib-lz4hc=y
+CONFIG_PACKAGE_kmod-mediatek_hnat=y
+CONFIG_PACKAGE_kmod-mt_wifi=y
+CONFIG_PACKAGE_kmod-mtd-rw=y
+CONFIG_PACKAGE_kmod-netlink-diag=y
+CONFIG_PACKAGE_kmod-nf-conncount=y
+CONFIG_PACKAGE_kmod-nf-dup-inet=y
+CONFIG_PACKAGE_kmod-nft-compat=y
+CONFIG_PACKAGE_kmod-nls-base=y
+CONFIG_PACKAGE_kmod-nls-cp437=y
+CONFIG_PACKAGE_kmod-nls-iso8859-1=y
+CONFIG_PACKAGE_kmod-nls-utf8=y
+CONFIG_PACKAGE_kmod-oaf=y
 CONFIG_PACKAGE_kmod-sched-core=y
-
-# openvpn-server 依赖
-CONFIG_PACKAGE_openvpn-openssl=y
-CONFIG_PACKAGE_openvpn-easy-rsa=y
-CONFIG_PACKAGE_luci-lib-jsonc=y
-
-# timecontrol 依赖
+CONFIG_PACKAGE_kmod-scsi-core=y
+CONFIG_PACKAGE_kmod-tcp-bbr=y
+CONFIG_PACKAGE_kmod-tun=y
+CONFIG_PACKAGE_kmod-warp=y
+CONFIG_PACKAGE_kmod-zram=y
+CONFIG_PACKAGE_kvcedit=y
+CONFIG_PACKAGE_libatomic=y
+CONFIG_PACKAGE_libblkid=y
+CONFIG_PACKAGE_libcap-ng=y
+CONFIG_PACKAGE_libcbor=y
+CONFIG_PACKAGE_libevdev=y
+CONFIG_PACKAGE_libfido2=y
+CONFIG_PACKAGE_libipset=y
+CONFIG_PACKAGE_libiptext=y
+CONFIG_PACKAGE_libiptext-nft=y
+CONFIG_PACKAGE_libiptext6=y
+CONFIG_PACKAGE_libkvcutil=y
+CONFIG_PACKAGE_liblz4=y
+CONFIG_PACKAGE_liblzo=y
+CONFIG_PACKAGE_libncurses=y
+CONFIG_PACKAGE_libnl=y
+CONFIG_PACKAGE_libnl-cli=y
+CONFIG_PACKAGE_libnl-core=y
+CONFIG_PACKAGE_libnl-genl=y
+CONFIG_PACKAGE_libnl-nf=y
+CONFIG_PACKAGE_libnl-route=y
+CONFIG_PACKAGE_libopenssl-afalg_sync=y
+CONFIG_PACKAGE_libopenssl-devcrypto=y
+CONFIG_PACKAGE_libpcap=y
+CONFIG_PACKAGE_libpcre2=y
+CONFIG_PACKAGE_libstdcpp=y
+CONFIG_PACKAGE_libudev-zero=y
+CONFIG_PACKAGE_libuuid=y
+CONFIG_PACKAGE_libxtables=y
+CONFIG_PACKAGE_lua-cjson=y
+CONFIG_PACKAGE_luci-app-appfilter=y
+CONFIG_PACKAGE_luci-app-argon-config=y
+CONFIG_PACKAGE_luci-app-arpbind=y
+CONFIG_PACKAGE_luci-app-autoreboot=y
+CONFIG_PACKAGE_luci-app-cloudflared=y
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-app-eqos=y
+CONFIG_PACKAGE_luci-app-mtwifi-cfg=y
+CONFIG_PACKAGE_luci-app-openvpn-server=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray is not set
+CONFIG_PACKAGE_luci-app-ramfree=y
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
+CONFIG_PACKAGE_luci-app-taskplan=y
 CONFIG_PACKAGE_luci-app-timecontrol=y
-CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_luci-app-turboacc-mtk=y
+CONFIG_PACKAGE_luci-app-upnp=y
+CONFIG_PACKAGE_luci-app-wol=y
+CONFIG_PACKAGE_luci-app-wrtbwmon=y
+CONFIG_PACKAGE_luci-i18n-appfilter-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-cloudflared-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-eqos-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-mtwifi-cfg-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-taskplan-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-timecontrol-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-turboacc-mtk-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wrtbwmon-zh-cn=y
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_mii_mgr=y
+CONFIG_PACKAGE_miniupnpd-nftables=y
+CONFIG_PACKAGE_mtk-smp=y
+CONFIG_PACKAGE_mtkhqos_util=y
+CONFIG_PACKAGE_mtwifi-cfg=y
+CONFIG_PACKAGE_nano=y
+CONFIG_PACKAGE_openssh-keygen=y
+CONFIG_PACKAGE_openssh-sftp-server=y
+CONFIG_PACKAGE_openssl-util=y
+CONFIG_PACKAGE_openvpn-easy-rsa=y
+CONFIG_PACKAGE_openvpn-openssl=y
+CONFIG_PACKAGE_regs=y
+CONFIG_PACKAGE_resolveip=y
+CONFIG_PACKAGE_rpcd-mod-rpcsys=y
+CONFIG_PACKAGE_switch=y
+CONFIG_PACKAGE_tc-tiny=y
+CONFIG_PACKAGE_tcpdump=y
+CONFIG_PACKAGE_terminfo=y
+CONFIG_PACKAGE_wget-ssl=y
+CONFIG_PACKAGE_wifi-dats=y
+CONFIG_PACKAGE_wifi-scripts=y
+CONFIG_PACKAGE_wireless-regdb=y
+CONFIG_PACKAGE_wireless-tools=y
+CONFIG_PACKAGE_wrtbwmon=y
+CONFIG_PACKAGE_xtables-nft=y
+CONFIG_PACKAGE_zram-swap=y
+# CONFIG_PKG_CHECK_FORMAT_SECURITY is not set
+# CONFIG_PKG_FORTIFY_SOURCE_1 is not set
+CONFIG_PKG_FORTIFY_SOURCE_2=y
+CONFIG_WARP_CHIPSET="mt7981"
+CONFIG_WARP_DBG_SUPPORT=y
+CONFIG_WARP_VERSION=2
+CONFIG_WED_HW_RRO_SUPPORT=y
+# CONFIG_WOLFSSL_HAS_ECC25519 is not set
+CONFIG_ZRAM_DEF_COMP_LZ4HC=y
+CONFIG_first_card=y
+CONFIG_first_card_name="MT7981"
+# CONFIG_MTK_BAND_STEERING is not set
+# CONFIG_MTK_DEFAULT_5G_PROFILE is not set
+# CONFIG_MTK_MAC_REPEATER_SUPPORT is not set
+# CONFIG_MTK_MULTI_PROFILE_SUPPORT is not set
+# CONFIG_MTK_PCIE_ASPM_DYM_CTRL_SUPPORT is not set
+# CONFIG_MTK_PRE_CAL_TRX_SET1_SUPPORT is not set
+# CONFIG_MTK_PRE_CAL_TRX_SET2_SUPPORT is not set
+# CONFIG_MTK_RLM_CAL_CACHE_SUPPORT is not set
+# CONFIG_MTK_SNIFFER_RADIOTAP_SUPPORT is not set
