--- a/qihoo-360t7-imm.config
+++ b/qihoo-360t7-imm.config
@@ -1,6 +1,9 @@
+# 目标硬件配置（360T7/MT7981）
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_filogic=y
 CONFIG_TARGET_mediatek_filogic_DEVICE_qihoo_360t7=y
+
+# 基础编译配置
 CONFIG_DEVEL=y
 CONFIG_TOOLCHAINOPTS=y
 CONFIG_BUSYBOX_CUSTOM=y
@@ -21,7 +24,49 @@ CONFIG_KERNEL_DEVMEM=y
 # CONFIG_KERNEL_KEYS is not set
 # CONFIG_KERNEL_MEMCG_SWAP is not set
 CONFIG_KERNEL_NET_CLS_CGROUP=y
+
+# ===================== 新增 BBRv3 核心配置 =====================
+CONFIG_KERNEL_TCP_CONG_BBR3=y          # 启用BBRv3算法
+CONFIG_KERNEL_TCP_CONG_BBR=y           # 保留基础BBR支持（兼容）
+CONFIG_KERNEL_DEFAULT_TCP_CONG="bbr3"  # 设置默认TCP算法为BBRv3
+# BBRv3依赖的流量控制/队列管理模块
+CONFIG_KERNEL_NET_SCH_HTOP=y
+CONFIG_KERNEL_NET_SCH_CBQ=y
+CONFIG_KERNEL_NET_SCH_PRIO=y
+CONFIG_KERNEL_NET_SCH_MULTIQ=y
+CONFIG_KERNEL_NET_SCH_RED=y
+CONFIG_KERNEL_NET_SCH_SFQ=y
+CONFIG_KERNEL_NET_SCH_TBF=y
+CONFIG_KERNEL_NET_SCH_GRED=y
+CONFIG_KERNEL_NET_SCH_DSMARK=y
+CONFIG_KERNEL_NET_SCH_INGRESS=y
+CONFIG_KERNEL_NET_CLS_U32=y
+CONFIG_KERNEL_NET_CLS_ROUTE4=y
+CONFIG_KERNEL_NET_CLS_FW=y
+CONFIG_KERNEL_NET_CLS_RSVP=y
+CONFIG_KERNEL_NET_CLS_RSVP6=y
+CONFIG_KERNEL_NET_CLS_FLOW=y
+CONFIG_KERNEL_NET_EMATCH=y
+CONFIG_KERNEL_NET_EMATCH_CMP=y
+CONFIG_KERNEL_NET_EMATCH_NBYTE=y
+CONFIG_KERNEL_NET_EMATCH_U32=y
+CONFIG_KERNEL_NET_EMATCH_META=y
+CONFIG_KERNEL_NET_EMATCH_TEXT=y
+CONFIG_KERNEL_NET_CLS_ACT=y
+CONFIG_KERNEL_NET_ACT_POLICE=y
+CONFIG_KERNEL_NET_ACT_GACT=y
+CONFIG_KERNEL_NET_ACT_MIRRED=y
+CONFIG_KERNEL_NET_ACT_IPT=y
+CONFIG_KERNEL_NET_ACT_NAT=y
+CONFIG_KERNEL_NET_ACT_PEDIT=y
+CONFIG_KERNEL_NET_ACT_SIMP=y
+CONFIG_KERNEL_NET_ACT_SKBEDIT=y
+# ===================== BBRv3 配置结束 =====================
+
+# LuCI及系统优化配置
 CONFIG_LUCI_SRCDIET=y
+
+# MT7981无线驱动核心配置
 CONFIG_MTK_ACK_CTS_TIMEOUT_SUPPORT=y
 CONFIG_MTK_AIR_MONITOR=y
 CONFIG_MTK_AMPDU_CONF_SUPPORT=y
@@ -114,6 +159,8 @@ CONFIG_MTK_WSC_INCLUDED=y
 CONFIG_MTK_WSC_V2_SUPPORT=y
 # CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM is not set
 CONFIG_OPENSSL_WITH_NPN=y
+
+# 软件包配置
 CONFIG_PACKAGE_blockd=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_cloudflared=y
@@ -197,7 +244,7 @@ CONFIG_PACKAGE_kmod-nls-iso8859-1=y
 CONFIG_PACKAGE_kmod-nls-utf8=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-scsi-core=y
-CONFIG_PACKAGE_kmod-tcp-bbr=y
+CONFIG_PACKAGE_kmod-tcp-bbr=y  # 保留基础BBR模块（BBRv3依赖）
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-warp=y
 CONFIG_PACKAGE_kmod-zram=y
